--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: d3xter
 email: d3xter0lab@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   A diverse exploration of security topics.
-show_excerpts: true # set to true to show excerpts on the homepage
+show_excerpts: false # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -18,7 +18,6 @@ plainwhite:
   dark_mode: false # set to true to add dark mode toggle
   portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
-  show_excerpts: false
   condensed_mobile:
     #- home
     - page
